<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".relaxingHobies">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/head">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hobbies"
            android:textSize="40sp"
            android:textStyle="bold|italic"
            android:layout_gravity="center"
            android:gravity="center"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/head">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies1"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_margin="10dp">
                <TextView
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hobbies2"
                    android:textSize="15sp"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/btn1"
                android:layout_weight="1"
                >
                <ImageButton

                    android:layout_margin="12dp"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:src="@drawable/hoby1"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Origami"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/btn2"
                android:layout_weight="1">

                <ImageButton

                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:src="@drawable/hoby2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Drwaning"
                    />
            </LinearLayout>

        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:id="@+id/btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton

                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby3"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Collecting Items"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/btn4">
                    <ImageButton
                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby4"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Gardening"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/btn5">
                    <ImageButton
                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby5"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Astronomy"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/btn6">
                    <ImageButton
                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby6"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Dancing"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/btn7">
                    <ImageButton
                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby7"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Singing"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/btn8">
                    <ImageButton
                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby8"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Photography"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/btn9">
                    <ImageButton
                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby9"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Cooking"
                        />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/btn10">
                    <ImageButton
                        android:layout_margin="12dp"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:src="@drawable/hoby10"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="Reading"
                        />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</RelativeLayout>